--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<link rel="stylesheet" href="css/responsive.css" type="text/css">
+	<link rel="stylesheet" href="style.css/css.css" type="text/css">
 	<title>Document</title>
 </head>
-
 <body>
-	
-	<img id="man-1" src="image/man-1.jpg" alt="man">
-	<img id="man-2" src="image/man-2.jpg" alt="man">
-	<p>I am the best<br /><span id="front">Front-end Developer</span></p>
-
+	<div class="clock">
+<!--
+		<p>10</p>
+		<p>9</p>
+		<p>8</p>
+		<p>7</p>
+		<p>6</p>
+		<p>5</p>
+		<p>4</p>
+		<p>3</p>
+		<p>2</p>
+		<p>1</p>
+		<p>I love CSS</p>
+-->
+	</div>
 </body>
-
 </html>
